370/assignment_5/debugmake
gcc skeleton.c -D_LINUX -ffast-math -funroll-loops -O0 -g -std=gnu99 -trigraphs -I../include -L../lib -L/usr/X11R6/lib -lGL -lglut -lGLU -lm -o asgn5
In file included from skeleton.c:2:0:
asgn5.c: In function ‘query_intersection’:
asgn5.c:28:25: error: ‘tTriangle {aka struct triangle}’ has no member named ‘triangle_data’
   tTuplef t1 = triangles->triangle_data[triangle].t1,
                         ^~
asgn5.c:29:25: error: ‘tTriangle {aka struct triangle}’ has no member named ‘triangle_data’
           t2 = triangles->triangle_data[triangle].t2,
                         ^~
asgn5.c:30:25: error: ‘tTriangle {aka struct triangle}’ has no member named ‘triangle_data’
           t3 = triangles->triangle_data[triangle].t3;
                         ^~
asgn5.c: In function ‘init_mod’:
asgn5.c:67:19: error: macro "BUILD_TRIANGLEX" requires 5 arguments, but only 1 given
   BUILD_TRIANGLEX();
                   ^
asgn5.c:67:3: error: ‘BUILD_TRIANGLEX’ undeclared (first use in this function)
   BUILD_TRIANGLEX();
   ^~~~~~~~~~~~~~~
asgn5.c:67:3: note: each undeclared identifier is reported only once for each function it appears in
asgn5.c:68:19: error: macro "BUILD_TRIANGLEY" requires 5 arguments, but only 1 given
   BUILD_TRIANGLEY();
                   ^
asgn5.c:68:3: error: ‘BUILD_TRIANGLEY’ undeclared (first use in this function)
   BUILD_TRIANGLEY();
   ^~~~~~~~~~~~~~~
make: *** [Makefile:8: asgn5] Error 1
